--- a/package.json
+++ b/package.json
@@ -10,23 +10,34 @@
     "dev": "tsx src/index.ts",
     "test": "jest",
     "start-gateway": "tsx src/start.ts",
+    "start-sse": "tsx src/start.ts",
     "build-and-start": "npm run build && npm run start-gateway"
   },
-  "keywords": ["mcp", "tavily", "load-balancer", "api-pool"],
+  "keywords": [
+    "mcp",
+    "tavily",
+    "load-balancer",
+    "api-pool"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "axios": "^1.6.0",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "eventsource": "^4.0.0",
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "tsx": "^4.0.0",
-    "typescript": "^5.3.0",
-    "jest": "^29.7.0",
     "@types/jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "@types/node": "^20.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.0",
+    "tsx": "^4.0.0",
+    "typescript": "^5.3.0"
   },
   "bin": {
     "tavily-mcp-lb": "./dist/index.js"
